[tool.poetry]
name = "pythonproject1"
version = "0.1.0"
description = ""
authors = ["denys <denusshtoma123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.2"
fastapi = "^0.111.0"
pyproject-toml = "^0.0.10"
black = "^24.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
